# eva_wthr

./: .gitignore  CMakeLists.txt  README.md  flash.sh  sdkconfig  sdkconfig.defaults
common_components/espressif__esp32_p4_function_ev_board/: esp32_p4_function_ev_board.c
main/: CMakeLists.txt  Kconfig.projbuild  eva_cdc.c  eva_cdc.h  eva_clock.c  eva_clock.h  eva_font_clock_144.c  eva_font_clock_144_extrabold.c  eva_font_clock_144_extralight.c  eva_font_uk_14.c  eva_font_uk_22.c  eva_fps_overlay.c  eva_fps_overlay.h  eva_screenshot.c  eva_screenshot.h  eva_settings.c  eva_settings.h  eva_weather.c  eva_weather.h  eva_weather_canvas.c  eva_weather_canvas.h  eva_wifi.c  eva_wifi.h  eva_wifi_status.c  eva_wifi_status.h  idf_component.yml  main.c  weather_fetch.c  weather_fetch.h  weather_fetch_clearoutside.c  weather_fetch_clearoutside.h  weather_fetch_openmeteo.c  weather_fetch_openmeteo.h  weather_provider.h
tools/: cdc_shoot.py  eva-batch-screenshots.py  eva-screenshot.py
